--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -10,6 +10,17 @@
     })();
     </script>
 {% endif %}
+{% if BAIDU_ANALYTICS %}
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?" + {{BAIDU_ANALYTICS}};
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+{% endif %}
 {% if GAUGES %}
     <script type="text/javascript">
     var _gauges = _gauges || [];
