--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -15,7 +15,7 @@
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?" + {{BAIDU_ANALYTICS}};
+  hm.src = "https://hm.baidu.com/hm.js?" + "{{BAIDU_ANALYTICS}}";
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
